--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ form {
   /* Add some padding and a grey background color to containers */
   .sign-up {
     padding: 20px;
-    background-color: #f1f1f1;
+    background-color: #a51a1a;
   }
   
   /* Style the input elements and the submit button */
